--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "devDependencies": {
         "@types/node": "^20.3.3",
+        "@types/ws": "^8.5.5",
         "cross-env": "^7.0.3",
         "nodemon": "^2.0.16",
         "ts-loader": "^9.4.4",
